[gd_scene load_steps=2 format=3 uid="uid://chp5dwhbvlwiv"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_bnhrr"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bnhrr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.0901961, 0.156863, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 80.0
offset_right = 240.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "2D恐怖生存游戏"
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="CreateRoomButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "创建房间(杀手)"

[node name="JoinRoomButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "加入房间(幸存者)"

[node name="SettingsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "设置"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "退出"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.1.0"
horizontal_alignment = 2

[node name="JoinPopup" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="JoinPopup"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "加入房间"
horizontal_alignment = 1

[node name="IPLabel" type="Label" parent="JoinPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -70.0
offset_right = -80.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
text = "IP地址:"

[node name="IPInput" type="LineEdit" parent="JoinPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -70.0
offset_right = 150.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "输入IP地址..."

[node name="PortLabel" type="Label" parent="JoinPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -20.0
offset_right = -80.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "端口:"

[node name="PortInput" type="LineEdit" parent="JoinPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -20.0
offset_right = 150.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "9999"
placeholder_text = "端口..."

[node name="NameLabel" type="Label" parent="JoinPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 30.0
offset_right = -80.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
text = "名称:"

[node name="NameInput" type="LineEdit" parent="JoinPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "输入玩家名称..."

[node name="JoinButton" type="Button" parent="JoinPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 80.0
offset_right = 60.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
text = "连接"

[node name="CancelButton" type="Button" parent="JoinPopup"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "取消"

[node name="SettingsPopup" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="SettingsPopup"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "设置"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MusicVolume" type="HBoxContainer" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPopup/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "音乐音量:"

[node name="MusicSlider" type="HSlider" parent="SettingsPopup/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.7

[node name="SFXVolume" type="HBoxContainer" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPopup/VBoxContainer/SFXVolume"]
layout_mode = 2
text = "音效音量:"

[node name="SFXSlider" type="HSlider" parent="SettingsPopup/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.8

[node name="FullscreenToggle" type="CheckButton" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2
text = "全屏显示"

[node name="SaveButton" type="Button" parent="SettingsPopup"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -50.0
offset_right = 40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "保存"

[connection signal="pressed" from="MenuContainer/CreateRoomButton" to="." method="_on_create_room_button_pressed"]
[connection signal="pressed" from="MenuContainer/JoinRoomButton" to="." method="_on_join_room_button_pressed"]
[connection signal="pressed" from="MenuContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="JoinPopup/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="JoinPopup/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="SettingsPopup/SaveButton" to="." method="_on_settings_save_button_pressed"] 